# rest_clients

./: .gitignore  LICENSE  README.md  __init__.py  __version__.py  eve_rest.py  exceptions.py  pyproject.toml  redis_client.py  requirements.txt  test_eve_client.py  test_eve_rest.py  test_redis_client.py  tox.ini
.github/workflows/: tests.yml
rest_clients/: __init__.py  _generic_rest.py  eve_client.py  eve_rest.py
tests/: test_eve_client.py  test_eve_rest.py  test_generic_rest_client.py  test_redis_client.py
